--- a/index.html
+++ b/index.html
@@ -67,27 +67,27 @@
         <div class="items">
 
             <div class="products">
-                <img src="/impression.png" alt="">
+                <img src="/delhihardware/impression.png" alt="">
                 <h3>Paint</h3>
             </div>
 
 
             <div class="products">
-                <img src="/wiper.jpg" alt="">
+                <img src="/delhihardware/wiper.jpg" alt="">
                 <h3>Cleaning aid</h3>
             </div>
 
 
 
             <div class="products">
-                <img src="/pexels-ksenia-chernaya-5691652.jpg" alt="">
+                <img src="/delhihardware/pexels-ksenia-chernaya-5691652.jpg" alt="">
                 <h3>Nails</h3>
             </div>
 
 
 
             <div class="products">
-                <img src="/wallputty.jpg" alt="">
+                <img src="/delhihardware/wallputty.jpg" alt="">
                 <h3>Wallputty</h3>
             </div>
 
@@ -103,28 +103,28 @@
 
 
             <div class="products1">
-                <img src="/ppr fitting.jpg" alt="">
+                <img src="/delhihardware/ppr fitting.jpg" alt="">
                 <h3>PPR Fitting</h3>
             </div>
 
 
 
             <div class="products1">
-                <img src="/door handle.jpg" alt="">
+                <img src="/delhihardware/door handle.jpg" alt="">
                 <h3>Door Fitting</h3>
             </div>
 
 
 
             <div class="products1">
-                <img src="/tap.jpg" alt="">
+                <img src="/delhihardware/tap.jpg" alt="">
                 <h3>Sanitary Items</h3>
             </div>
 
 
 
             <div class="products1">
-                <img src="/water tanker.png" alt="">
+                <img src="/delhihardware/water tanker.png" alt="">
                 <h3>Water Tankers</h3>
             </div>
 
